# repy

./: .gitignore  .gitmodules  Cargo.toml  GEMINI.md  README.md  ROADMAP.md  pg2680-images.epub  roadmap.md  to-do.md
.claude/skills/verify/: SKILL.md
.github/workflows/: release.yml
improvements/: improvement-01.md  improvement-02.md  improvement-03.md  improvement-04.md  improvement-05.md  improvement-06.md  improvement-07.md  improvement-08.md  improvement-09.md  improvement-10.md  improvement-11.md
plans/: visual-mode.md
specs/: text-rendering.allium  tts.allium
src/: annotations.rs  cli.rs  config.rs  css.rs  ebook.rs  lib.rs  library.rs  logging.rs  main.rs  models.rs  opds.rs  parser.rs  renderer.rs  settings.rs  state.rs  statistics.rs  sync.rs  theme.rs  xpointer.rs
src/formats/: cbz.rs  epub.rs  fb2.rs  mobi.rs  mod.rs  text.rs
src/ui/: board.rs  graphics.rs  mod.rs  reader.rs
src/ui/reader/: mod.rs  snapshot_tests.rs  tts.rs
src/ui/reader/snapshots/: repy__ui__reader__snapshot_tests__confirm_sync_progress_prompt.snap  repy__ui__reader__snapshot_tests__cursor_mode.snap  repy__ui__reader__snapshot_tests__help_window.snap  repy__ui__reader__snapshot_tests__help_window_filtered.snap  repy__ui__reader__snapshot_tests__image_view_window.snap  repy__ui__reader__snapshot_tests__image_view_window_closed.snap  repy__ui__reader__snapshot_tests__initial_screen.snap  repy__ui__reader__snapshot_tests__inline_image_rendering.snap  repy__ui__reader__snapshot_tests__internal_link_preview.snap  repy__ui__reader__snapshot_tests__invalid_config_startup_warning.snap  repy__ui__reader__snapshot_tests__library_cover_panel.snap  repy__ui__reader__snapshot_tests__library_window.snap  repy__ui__reader__snapshot_tests__library_window_sorted_by_title.snap  repy__ui__reader__snapshot_tests__line_numbers.snap  repy__ui__reader__snapshot_tests__multi_row_search_hit_counter_and_layout.snap  repy__ui__reader__snapshot_tests__opds_catalogs_window.snap  repy__ui__reader__snapshot_tests__opds_catalogs_window_empty.snap  repy__ui__reader__snapshot_tests__opds_download_progress_centered.snap  repy__ui__reader__snapshot_tests__opds_feed_details_pane.snap  repy__ui__reader__snapshot_tests__opds_feed_window.snap  repy__ui__reader__snapshot_tests__rename_bookmark.snap  repy__ui__reader__snapshot_tests__scroll_down.snap  repy__ui__reader__snapshot_tests__search_flow.snap  repy__ui__reader__snapshot_tests__search_highlight_and_match_counter.snap  repy__ui__reader__snapshot_tests__settings_window_sections.snap  (+3 more)
src/ui/windows/: bookmarks.rs  dictionary.rs  footnotes.rs  help.rs  images.rs  library.rs  links.rs  metadata.rs  mod.rs  opds.rs  search.rs  settings.rs  statistics.rs  toc.rs
tests/: cli.rs  ebook.rs  hyphenation.rs  images.rs  jump_history.rs  library_immediate_update.rs  links_preview.rs  parser_footnotes.rs  reproduce_issue.rs
tests/fixtures/: footnotes-class-based.html  meditation.epub  sample.fb2  sample.md  sample.txt  source-map-selection.html
