[package]
name = "repy"
version = "0.4.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0-beta.0"
crossterm = "0.29.0"
eyre = "0.6.12"
epub = "2.1.5"
scraper = "0.24.0"
clap = { version = "4.5.53", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["chrono", "bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
hex = "0.4.3"
html2text = "0.16.4"
arboard = "3.6.1"
regex = "1.10.6"
hyphenation = { version = "0.8.4", features = ["embed_en-us"] }
textwrap = { version = "0.16.1", features = ["hyphenation"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
